--- a/index.html
+++ b/index.html
@@ -9,50 +9,53 @@
 </head>
 
 <body>
+    <section>
     <nav class="nav-menu">
         <ul>
-            <li class="list" style="">
+            <li class="list active">
                 <a href="#">
                     <span class="icon">
                         <ion-icon name="home-outline"></ion-icon>
                     </span>
-                    <span>Home</span>
+                    <span class="text">Home</span>
                 </a>
             </li>
-            <li class="list" style="">
+            <li class="list">
                 <a href="#">
                     <span class="icon">
                         <ion-icon name="search-outline"></ion-icon>
                     </span>
-                    <span>Search</span>
+                    <span class="text">Search</span>
                 </a>
             </li>
-            <li class="list" style="">
+            <li class="list">
                 <a href="#">
                     <span class="icon">
                         <ion-icon name="duplicate-outline"></ion-icon>
                     </span>
-                    <span>Post</span>
+                    <span class="text">Post</span>
                 </a>
             </li>
-            <li class="list" style="">
+            <li class="list">
                 <a href="#">
                     <span class="icon">
                         <ion-icon name="person-outline"></ion-icon>
                     </span>
-                    <span>Profile</span>
+                    <span class="text">Profile</span>
                 </a>
             </li>
-            <li class="list" style="">
+            <li class="list">
                 <a href="#">
                     <span class="icon">
                         <ion-icon name="settings-outline"></ion-icon>
                     </span>
-                    <span>Settings</span>
+                    <span class="text">Settings</span>
                 </a>
             </li>
+            <div class="indicator"></div>
         </ul>
     </nav>
+</section>
     <script src="./js/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
